--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="username">Username</string>
     <string name="change_photo">Change photo</string>
     <string name="save">Save</string>
+    <string name="error_while_loading_data_please_check_your_network_connection">Error while loading data! Please check your network connection!</string>
+    <string name="try_again">Try again</string>
 </resources>
