--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="settings_theme_change">Default</string>
     <string name="settings_support">Support</string>
     <string name="settings_faq">FAQ</string>
-    <string name="user_photo_url">https://psv4.vk.me/c812234/u65371160/docs/963390bed5a4/prof.png?extra=1p8DYLkOUc1b5XsFDeaeikHD7zDRydCfSOMh_FBiH53Obi1XgIyXqh7NB48vs1r4ysLybIahd7WJD4f94yLDi6pIO_TclHnLQmHW2F5eHGZxXp1q540e-apZ</string>
+    <string name="user_photo_url">https://chapters.theiia.org/northwest-ohio/About/ChapterOfficers/Larounis,%20John.png</string>
     <!-- End Settings -->
 
      <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,
