--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="facebook_app_id">1150276381681321</string>
+    <string name="basic_line">-</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fbloginText">Facebook</string>
@@ -49,7 +50,6 @@
     <string name="nd_exit">Exit</string>
     <!--End ND strings -->
 
-
     <!-- Start Settings -->
     <string name="settings_username_title">Username</string>
     <string name="settings_information">Information</string>
@@ -67,6 +67,85 @@
     <string name="user_photo_url">https://chapters.theiia.org/northwest-ohio/About/ChapterOfficers/Larounis,%20John.png</string>
     <!-- End Settings -->
 
+    <!-- Start User list row -->
+    <string name="user_list_row_pos">pos</string>
+    <string name="user_list_row_name">name</string>
+    <string name="user_list_row_points">points</string>
+    <string name="user_list_row_text_points">Points:</string>
+    <!-- End User list row -->
+
+    <!-- Start User rate list row -->
+    <string name="user_rate_list_row_rated_home_team">rated_home_team</string>
+    <string name="user_rate_list_row_rated_away_team">rated_away_team</string>
+    <string name="user_rate_list_row_ratedtype">ratedType</string>
+    <string name="user_rate_list_row_ratedpoints">ratedPoints</string>
+    <!-- End User rate list row -->
+
+    <!-- Start League table row -->
+    <string name="league_table_row_nameteam">nameteam</string>
+    <string name="league_table_row_pos">Pos</string>
+    <string name="league_table_row_p">P</string>
+    <string name="league_table_row_games">Games</string>
+    <string name="league_table_row_g">G</string>
+    <string name="league_table_row_gd">GD</string>
+    <string name="league_table_row_d">D</string>
+    <string name="league_table_row_pts">Pts</string>
+    <string name="league_table_row_pt">Pt</string>
+    <!-- End League table row -->
+
+    <!-- Start Match list row -->
+    <string name="match_list_row_hometeam">homeTeam</string>
+    <string name="match_list_row_awayteam">awayTeam</string>
+    <string name="match_list_row_time">time</string>
+    <string name="match_list_row_status">status</string>
+    <!-- End Match list row -->
+
+    <!-- Start League list row -->
+    <string name="league_list_row_name_league">Name league</string>
+    <string name="league_list_row_teams_of_league">Teams of league:</string>
+    <string name="league_list_row_number">number</string>
+    <string name="league_list_row_short_league">short league</string>
+    <string name="league_list_row_year">year</string>
+    <!-- End League list row -->
+
+    <!-- Start Home team player row -->
+    <string name="home_team_player_row_name">Name</string>
+    <string name="home_team_player_row_birthday">Birthday:</string>
+    <string name="home_team_player_row_number">number</string>
+    <string name="home_team_player_row_year">year</string>
+    <string name="home_team_player_row_nationality">Nationality:</string>
+    <string name="home_team_player_row_position">position</string>
+    <!-- End Home team player row -->
+
+    <!-- Start Fragment rate -->
+    <string name="fragment_rate_round">round</string>
+    <string name="fragment_rate_status">status</string>
+    <string name="fragment_rate_home_team">home team</string>
+    <string name="fragment_rate_away_team">away team</string>
+    <string name="fragment_rate_win">win</string>
+    <string name="fragment_rate_draw">draw</string>
+    <string name="fragment_rate_lose">lose</string>
+    <!-- End Fragment rate -->
+
+    <!-- Start Dialog rate -->
+    <string name="dialog_rate_amount_of_winnings">Amount of winnings =</string>
+    <string name="dialog_rate_0">0</string>
+    <string name="dialog_rate_type">Type:</string>
+    <string name="dialog_rate_null">null</string>
+    <!-- End Dialog rate -->
+
+    <!-- Start Dialog photo -->
+    <string name="dialog_photo_photo">Photo</string>
+    <string name="dialog_photo_load_from_gallery">Load from gallery</string>
+    <string name="dialog_photo_take_photo">Take photo</string>
+    <!-- End Dialog photo -->
+
+    <!-- Start Activity splash -->
+    <string name="activity_splash_soccer_events">SOCCER EVENTS</string>
+    <string name="activity_splash_the_art_of_shitcoding">The Art Of ShitCoding</string>
+    <string name="activity_splash_simplevision_studio">© Simplevision Studio</string>
+    <!-- End Activity splash -->
+
      <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,
         purus ullamcorper quam dignissim ligula vitae, tellus pharetra, urna arcu nunc ut sem
         duis fermentum. Consequat gravida molestie vulputate libero cras, eleifend magna ut,
@@ -75,7 +154,7 @@
         etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,
         in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus
         sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,
-        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend orci orci morbi felis.
+        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend morbi felis.
         Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,
         in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales
         elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis
@@ -87,7 +166,7 @@
         Semper pulvinar nunc laoreet ac, proin tristique dolor sed eos, nibh euismod eros sit vestibulum
         dictum, cum mauris eget enim. Hendrerit ultricies, tempor mattis. Ut sed dictum eget, mauris vel interdum
         enim eros, tempor dolor, quam odit justo nec nulla fringilla eget. Leo ipsum, ultricies eleifend habitant
-        massa potenti doloribus, vitae dapibus et et, donec mus convallis. Eu senectus, praesent mi vitae odio est.
+        massa potenti doloribus, vitae dapibus, donec mus convallis. Eu senectus, praesent mi vitae odio est.
         Saepe sed ornare.Tincidunt eget auctor mauris donec in odio, donec at turpis, sed sapien velit nunc,
         mauris et vivamus maecenas integer mi. Tempor wisi praesent convallis quisque, iaculis quam aliquam id.
         Quam ut purus vestibulum eros eget vitae, eget vehicula ipsum eu id volutpat sed. Quisque bibendum pellentesque.
@@ -95,6 +174,5 @@
         diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam
         vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat
         diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
-
 
 </resources>
