--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -9,7 +9,35 @@
     <string name="email">Email</string>
     <string name="enter_email_address">Введіть email</string>
     <string name="enter_new_email">Введіть новий email</string>
-    <string name="enter_new_name">Введіть нове ім\'я</string>
+    <string name="enter_new_name">Введіть нове імя</string>
     <string name="enter_new_password">Введіть новий пароль</string>
     <string name="enter_password">Введіть пароль</string>
+    <string name="league_table_row_d">D</string>
+    <string name="league_table_row_g">G</string>
+    <string name="league_table_row_games">Ігри</string>
+    <string name="league_table_row_gd">GD</string>
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,         purus ullamcorper quam dignissim ligula vitae, tellus pharetra, urna arcu nunc ut sem         duis fermentum. Consequat gravida molestie vulputate libero cras, eleifend magna ut,         in condimentum, nulla consectetuer. Leo consectetuer velit in turpis, nisl sed nec potenti,         nec in ullamcorper vel quis, in nunc tortor eleifend. Velit elementum nulla nec, sit elit,         etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,         in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus         sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,         feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend morbi felis.         Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,         in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales         elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis         neque, vivamus lacus. Libero aliquam curabitur velit, nulla semper dignissim, justo pulvinar vivamus         in morbi suscipit. Elit ligula nec dui accumsan dignissim, curabitur sed consequat, at donec, morbi         purus ac sodales mauris vestibulum, a pharetra elit donec aliquam. Quisque mus quis, etiam ullamcorper         nec. Nullam porttitor enim egestas, ullamcorper dui proin erat felis lorem, non enim et. In amet mollis.         Proin consequat a tellus lectus pede, ante etiam elit pede amet, eu neque pede ut suspendisse.Dapibus nunc.         Semper pulvinar nunc laoreet ac, proin tristique dolor sed eos, nibh euismod eros sit vestibulum         dictum, cum mauris eget enim. Hendrerit ultricies, tempor mattis. Ut sed dictum eget, mauris vel interdum         enim eros, tempor dolor, quam odit justo nec nulla fringilla eget. Leo ipsum, ultricies eleifend habitant         massa potenti doloribus, vitae dapibus, donec mus convallis. Eu senectus, praesent mi vitae odio est.         Saepe sed ornare.Tincidunt eget auctor mauris donec in odio, donec at turpis, sed sapien velit nunc,         mauris et vivamus maecenas integer mi. Tempor wisi praesent convallis quisque, iaculis quam aliquam id.         Quam ut purus vestibulum eros eget vitae, eget vehicula ipsum eu id volutpat sed. Quisque bibendum pellentesque.         Quisque at nam non lacinia, risus non, malesuada ante arcu tincidunt. Eget eget lacus vel. At lacus at vestibulum,         diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam         vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat         diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
+    <string name="loading">Завантаження</string>
+    <string name="match_list_row_status">статус</string>
+    <string name="match_list_row_time">час</string>
+    <string name="settings_language">Мова</string>
+    <string name="wait_while_loading_photo">Зачекайте, завантажується фото!</string>
+    <string name="we_have_sent">Ми відправили інстркції, як відновити Ваш пароль</string>
+    <string name="user_photo_url">https://chapters.theiia.org/northwest-ohio/About/ChapterOfficers/Larounis,%20John.png</string>
+    <string name="ukraine">Українська</string>
+    <string name="try_again">Спробуйте ще раз</string>
+    <string name="title_activity_login">Увійти</string>
+    <string name="sing_up">Вийти</string>
+    <string name="sign_in">Увійти</string>
+    <string name="settings_language_change">Англійська</string>
+    <string name="settings_information">Інформація</string>
+    <string name="settings_faq">FAQ</string>
+    <string name="settings_email">Email</string>
+    <string name="settings_change_password">Змінити пароль</string>
+    <string name="save">Зберегти</string>
+    <string name="nd_my_rates">Мої ставки</string>
+    <string name="nd_exit">Вийти</string>
+    <string name="nd_all_users">Всі користувачі</string>
+    <string name="btn_forgot_password"></string>
+    <string name="username"></string>
 </resources>
