--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
         etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,
         in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus
         sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,
-        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend orci orci morbi felis.
+        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend obi orci morbi felis.
         Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,
         in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales
         elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis
