--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="email">Email</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
-    <string name="change_email">Change Email</string>
-    <string name="change_password">Change Password</string>
-    <string name="send_password_reset_email">Send Password reset email</string>
+    <string name="change_email">Change email</string>
+    <string name="change_password">Change password</string>
+    <string name="send_password_reset_email">Send password reset email</string>
     <string name="remove_user">Remove user</string>
     <string name="new_pass">New Password</string>
     <string name="title_activity_profile">Soccer Events</string>
@@ -19,7 +19,7 @@
     <string name="btn_link_to_login">Already registered. Login Me!</string>
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
     <string name="btn_forgot_password">Forgot your password?</string>
-    <string name="btn_reset_password">Reset Password</string>
+    <string name="btn_reset_password">Reset password</string>
     <string name="btn_back"><![CDATA[<< Back]]></string>
     <string name="hint_new_email">New Email</string>
     <string name="btn_change">Change</string>
@@ -30,9 +30,6 @@
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="facebook_app_id">1150276381681321</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="fbloginText">Facebook</string>
-    <string name="googleloginText">Google+</string>
     <string name="username">Username</string>
     <string name="change_photo">Change photo</string>
     <string name="save">Save</string>
@@ -95,6 +92,60 @@
         diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam
         vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat
         diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
+    <string name="sign_in">Sign in</string>
+    <string name="enter_email">Enter email address!</string>
+    <string name="enter_pass">Enter password!</string>
+    <string name="no_connection">Not connected to internet</string>
+    <string name="enter_reg_email">Enter your registered email</string>
+    <string name="short_pass">Password too short, enter minimum 6 characters!</string>
+    <string name="sign_up">Sing up</string>
+    <string name="edit">Edit</string>
+    <string name="select_picture">Select picture</string>
+    <string name="enter_points">Enter points...</string>
+    <string name="set_rate">Set rate</string>
+    <string name="cancel">Cancel</string>
+    <string name="points">Points...</string>
+    <string name="enter_rate">Enter rate!</string>
+    <string name="error_login">Error, try again please!</string>
+    <string name="rate_deleted">Rate is deleted</string>
+    <string name="undo">UNDO</string>
+    <string name="rate_restored">Rate is restored!</string>
+    <string name="reset_instruction">We have sent you instructions to reset your password!</string>
+    <string name="failed_send_instruction">Failed to send reset email!</string>
+    <string name="wait_sec">Wait 30s and refresh</string>
+    <string name="loading">Loading</string>
+    <string name="tab_league">League</string>
+    <string name="tab_match">Match</string>
+    <string name="round_of">"Round of "</string>
+    <string name="enter_new_name">Enter new name</string>
+    <string name="enter_new_email">Enter new email</string>
+    <string name="enter_new_password">Enter new password</string>
+    <string name="wait_loading_photo">Wait, while loading photo!</string>
+    <string name="soccer_events">SOCCER EVENTS</string>
+    <string name="birthday">Birthday: </string>
+    <string name="nationality">Nationality:</string>
+    <string name="edit_email">Edit email</string>
+    <string name="edit_password">Edit password</string>
+    <string name="photo">Photo</string>
+    <string name="load_from_gallery">Load from gallery</string>
+    <string name="take_photo">Take photo</string>
+    <string name="amount_of_winnings">Amount of winnings =</string>
+    <string name="_0">0</string>
+    <string name="type">Type:</string>
+    <string name="enter_your_name">Enter your name</string>
+    <string name="new_name">New name</string>
+    <string name="sorry_the_api_developer_is_fool">Sorry, the API developer is fool</string>
+    <string name="no_matches_today">No matches today...</string>
+    <string name="soccer_event_v0_9">Soccer Event v0.9</string>
+    <string name="teams_of_league">Teams of league:</string>
+    <string name="pos">Pos</string>
+    <string name="games">Games</string>
+    <string name="gd">GD</string>
+    <string name="pts">Pts</string>
+    <string name="points_user">Points:</string>
+    <string name="select_language">Select language</string>
+    <string name="english">English</string>
+    <string name="ukrainian">Ukrainian</string>
 
 
 </resources>
