--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -51,7 +51,13 @@
     <string name="lbl_forgot_password">Забули пароль?</string>
     <string name="load_from_gallery">Завантажити з галереї</string>
     <string name="loading">Завантаження</string>
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,         purus ullamcorper quam dignissim ligula vitae, tellus pharetra, urna arcu nunc ut sem         duis fermentum. Consequat gravida molestie vulputate libero cras, eleifend magna ut,         in condimentum, nulla consectetuer. Leo consectetuer velit in turpis, nisl sed nec potenti,         nec in ullamcorper vel quis, in nunc tortor eleifend. Velit elementum nulla nec, sit elit,         etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,         in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus         sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,         feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend obi orci morbi felis.         Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,         in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales         elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis         neque, vivamus lacus. Libero aliquam curabitur velit, nulla semper dignissim, justo pulvinar vivamus         in morbi suscipit. Elit ligula nec dui accumsan dignissim, curabitur sed consequat, at donec, morbi         purus ac sodales mauris vestibulum, a pharetra elit donec aliquam. Quisque mus quis, etiam ullamcorper         nec. Nullam porttitor enim egestas, ullamcorper dui proin erat felis lorem, non enim et. In amet mollis.         Proin consequat a tellus lectus pede, ante etiam elit pede amet, eu neque pede ut suspendisse.Dapibus nunc.         Semper pulvinar nunc laoreet ac, proin tristique dolor sed eos, nibh euismod eros sit vestibulum         dictum, cum mauris eget enim. Hendrerit ultricies, tempor mattis. Ut sed dictum eget, mauris vel interdum         enim eros, tempor dolor, quam odit justo nec nulla fringilla eget. Leo ipsum, ultricies eleifend habitant         massa potenti doloribus, vitae dapibus et et, donec mus convallis. Eu senectus, praesent mi vitae odio est.         Saepe sed ornare.Tincidunt eget auctor mauris donec in odio, donec at turpis, sed sapien velit nunc,         mauris et vivamus maecenas integer mi. Tempor wisi praesent convallis quisque, iaculis quam aliquam id.         Quam ut purus vestibulum eros eget vitae, eget vehicula ipsum eu id volutpat sed. Quisque bibendum pellentesque.         Quisque at nam non lacinia, risus non, malesuada ante arcu tincidunt. Eget eget lacus vel. At lacus at vestibulum,         diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam         vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat         diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
+    <string name="lorem_ipsum">Soccer Events — додаток, розроблений для перегляду та моніторингу
+        футбольних матчів різних світових ліг. У ньому є можливість перегляду турнірних таблиць 15
+        футбольних ліг; анонс та результати матчів на заданий день. Головною особливістю додатку є
+        реалізація системи ставок на футбольні матчі. Користувач має можливість зробити ставку на
+        вибраний матч; переглядати свої ставки та слідкувати за вибраними матчами. Також реалізована
+        рейтингова система, у якій ти можеш відслідковувати своє положення та к-сть набраних очків
+        у порівнянні з іншими гравцями. Приємної та вдалої гри!</string>
     <string name="minimum_password">Пароль надто короткий, мінімальна к-сть 6 символів</string>
     <string name="my_rate">Мої ставки</string>
     <string name="nationality">Н-льність:</string>
@@ -118,4 +124,6 @@
     <string name="english">Англійська</string>
     <string name="enter_correct_email">Неправильний адрес!</string>
     <string name="cheking_your_rates">Оновлення даних...</string>
+    <string name="about_app">Про програму</string>
+    <string name="status_rate"></string>
 </resources>
