--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,9 @@
 
     <!--Start ND strings -->
     <string name="nd_home">Home</string>
-    <string name="nd_sub_rates">Rates</string>
+    <string name="nd_sub_rates">Bets</string>
     <string name="nd_all_users">All users</string>
-    <string name="nd_my_rates">My rates</string>
+    <string name="nd_my_rates">My bets</string>
     <string name="nd_sub_option">Options</string>
     <string name="nd_settings">Settings</string>
     <string name="nd_exit">Exit</string>
@@ -64,34 +64,13 @@
     <string name="user_photo_url">https://chapters.theiia.org/northwest-ohio/About/ChapterOfficers/Larounis,%20John.png</string>
     <!-- End Settings -->
 
-     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,
-        purus ullamcorper quam dignissim ligula vitae, tellus pharetra, urna arcu nunc ut sem
-        duis fermentum. Consequat gravida molestie vulputate libero cras, eleifend magna ut,
-        in condimentum, nulla consectetuer. Leo consectetuer velit in turpis, nisl sed nec potenti,
-        nec in ullamcorper vel quis, in nunc tortor eleifend. Velit elementum nulla nec, sit elit,
-        etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,
-        in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus
-        sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,
-        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend obi orci morbi felis.
-        Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,
-        in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales
-        elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis
-        neque, vivamus lacus. Libero aliquam curabitur velit, nulla semper dignissim, justo pulvinar vivamus
-        in morbi suscipit. Elit ligula nec dui accumsan dignissim, curabitur sed consequat, at donec, morbi
-        purus ac sodales mauris vestibulum, a pharetra elit donec aliquam. Quisque mus quis, etiam ullamcorper
-        nec. Nullam porttitor enim egestas, ullamcorper dui proin erat felis lorem, non enim et. In amet mollis.
-        Proin consequat a tellus lectus pede, ante etiam elit pede amet, eu neque pede ut suspendisse.Dapibus nunc.
-        Semper pulvinar nunc laoreet ac, proin tristique dolor sed eos, nibh euismod eros sit vestibulum
-        dictum, cum mauris eget enim. Hendrerit ultricies, tempor mattis. Ut sed dictum eget, mauris vel interdum
-        enim eros, tempor dolor, quam odit justo nec nulla fringilla eget. Leo ipsum, ultricies eleifend habitant
-        massa potenti doloribus, vitae dapibus et et, donec mus convallis. Eu senectus, praesent mi vitae odio est.
-        Saepe sed ornare.Tincidunt eget auctor mauris donec in odio, donec at turpis, sed sapien velit nunc,
-        mauris et vivamus maecenas integer mi. Tempor wisi praesent convallis quisque, iaculis quam aliquam id.
-        Quam ut purus vestibulum eros eget vitae, eget vehicula ipsum eu id volutpat sed. Quisque bibendum pellentesque.
-        Quisque at nam non lacinia, risus non, malesuada ante arcu tincidunt. Eget eget lacus vel. At lacus at vestibulum,
-        diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam
-        vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat
-        diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
+     <string name="lorem_ipsum">Soccer Events - an application designed for viewing and monitoring
+         of various international football matches leagues. It has the ability to view the standings
+         15 football leagues; preview and scores on a given day. The main feature of the application
+         is to implement a system betting on football matches. The user is able to rely on my match;
+         revise their bids and monitor the selected matches. Also implemented a rating system, where
+         you can track your location and Amount collected points compared to the other players.
+         Pleasant and successful game!</string>
     <string name="sign_in">Sign in</string>
     <string name="enter_email">Enter email address!</string>
     <string name="enter_pass">Enter password!</string>
@@ -102,14 +81,14 @@
     <string name="edit">Edit</string>
     <string name="select_picture">Select picture</string>
     <string name="enter_points">Enter points...</string>
-    <string name="set_rate">Set rate</string>
+    <string name="set_rate">Set bet</string>
     <string name="cancel">Cancel</string>
     <string name="points">Points...</string>
-    <string name="enter_rate">Enter rate!</string>
+    <string name="enter_rate">Enter bet!</string>
     <string name="error_login">Error, try again please!</string>
-    <string name="rate_deleted">Rate is deleted</string>
+    <string name="rate_deleted">Bet is deleted</string>
     <string name="undo">UNDO</string>
-    <string name="rate_restored">Rate is restored!</string>
+    <string name="rate_restored">Bet is restored!</string>
     <string name="reset_instruction">We have sent you instructions to reset your password!</string>
     <string name="failed_send_instruction">Failed to send reset email!</string>
     <string name="wait_sec">Wait 30sec, and refresh</string>
@@ -147,7 +126,6 @@
     <string name="english">English</string>
     <string name="ukrainian">Ukrainian</string>
     <string name="enter_correct_email">Enter correct email</string>
-    <string name="cheking_your_rates">Cheking your rates...</string>
-
-
+    <string name="cheking_your_rates">Checking your bets...</string>
+    <string name="about_app">About app</string>
 </resources>
