--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -128,4 +128,5 @@
     <string name="status_rate"></string>
     <string name="rate">Тип:</string>
     <string name="you_can_win">Сума виграшу:</string>
+    <string name="how_to_create_bets">Як правильно ставити?</string>
 </resources>
