--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -129,4 +129,6 @@
     <string name="rate">Тип:</string>
     <string name="you_can_win">Сума виграшу:</string>
     <string name="how_to_create_bets">Як правильно ставити?</string>
+    <string name="help_text">Ставку можна зробити на головному вікні програми у вкладці «Матчі», вибравши необхідний Вам матч. При кліку на коефіцієнт з’явиться вікно для створення ставки. Після успішного виконання вищезазначених дій, Ваші ставки будуть відображуватися у вікні «Мої ставки» (зелений – ставка виграшна; червоний – ставка програшна; сірий – ставка ще не перевірена). </string>
+    <string name="your_points">Доступні очки: </string>
 </resources>
