--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
         select the required match. Clicking on the rate will appear to create ponds. After
         successfully implementing the above actions, your rates will be displayed in the "My bets"
         (green - a winning bid, red - losing rate; gray - rate has not tested).</string>
+    <string name="enough_points">You have enough points</string>
 </resources>
