--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="name_update">Name is updated!</string>
     <string name="email_update">Email is updated!</string>
     <string name="password_update">Password is updated!</string>
+    <string name="updating">Updating...</string>
 </resources>
